Infinite UI process hang under ensurePositionInformationIsUpToDate https://bugs.webkit.org/show_bug.cgi?id=168154 <rdar://problem/30428673>

Reviewed by Simon Fraser.

Source/WebKit2:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView cleanupInteraction]):
If the web process crashes or we're being torn down for another reason,
assume that we aren't ever going to receive any pending async interaction
information update. Otherwise, ensurePositionInformationIsUpToDate can end
up waiting for it forever.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/InteractionDeadlockAfterCrash.mm: Added.
(recursiveFindHighlightLongPressRecognizer):
(TEST):
Add a somewhat nasty test that does an async interaction information update, but
kills the Web process before it arrives, and then does a sync interaction
information update, which will wait for the oustanding async interaction
information update if we still think it's coming. Before the patch, this
test times out with the UI process stuck under ensurePositionInformationIsUpToDate.


Canonical link: https://commits.webkit.org/185207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212167 268f45cc-cd09-0410-ab3c-d52691b4dbfc